--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,10 @@ p,form { padding:10px 40px; }
 a { color:#999; text-decoration:none; }
 a:hover { text-decoration:underline; }
 
-
-
-
+#banner h1 { color: white; margin: .5em 1em 0; padding: 0; font-weight: bold; }
+#banner p { margin-left: 2.5em; padding: 0; }
+#banner a { color: white; margin: 0; padding: 0; }
+#banner p a:last-child { color: yellow; margin-left: .5em; }
 
 #id01, #id02 { padding-top: 50px; height: 95% }
 
